Create controller for suppliers
