# storage/api-docs/api-docs.json
@@ -294,6 +294,226 @@
                     }
                 ]
             }
+        },
+        "/api/v1/suppliers/getall": {
+            "get": {
+                "tags": [
+                    "suppliers"
+                ],
+                "description": "Get all suppliers",
+                "operationId": "App\\Http\\Controllers\\SuppliersController::getAll",
+                "responses": {
+                    "default": {
+                        "description": "Get all suppliers"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/suppliers/insert": {
+            "post": {
+                "tags": [
+                    "suppliers"
+                ],
+                "summary": "Insert a new supplier",
+                "operationId": "App\\Http\\Controllers\\SuppliersController::insert",
+                "requestBody": {
+                    "description": "Input data format",
+                    "content": {
+                        "application/x-www-form-urlencoded": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
+                                        "description": "The name of the supplier",
+                                        "type": "string"
+                                    },
+                                    "address": {
+                                        "description": "The address of the supplier",
+                                        "type": "string"
+                                    },
+                                    "phoneNumber": {
+                                        "description": "The phone number of the supplier",
+                                        "type": "string"
+                                    },
+                                    "createdBy": {
+                                        "description": "The foreign key of the owner who creates the supplier",
+                                        "type": "integer"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "400": {
+                        "description": "Error"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/suppliers/getbyid/{id}": {
+            "get": {
+                "tags": [
+                    "suppliers"
+                ],
+                "description": "Get an supplier by id",
+                "operationId": "App\\Http\\Controllers\\SuppliersController::getSupplierById",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Id of supplier",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "responses": {
+                    "default": {
+                        "description": "Get a supplier by id"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/suppliers/update": {
+            "post": {
+                "tags": [
+                    "suppliers"
+                ],
+                "summary": "Update a supplier",
+                "operationId": "App\\Http\\Controllers\\SuppliersController::update",
+                "requestBody": {
+                    "description": "Input data format",
+                    "content": {
+                        "application/x-www-form-urlencoded": {
+                            "schema": {
+                                "properties": {
+                                    "id": {
+                                        "description": "The id of the supplier",
+                                        "type": "integer"
+                                    },
+                                    "name": {
+                                        "description": "The name of the supplier",
+                                        "type": "string"
+                                    },
+                                    "address": {
+                                        "description": "The address of the supplier",
+                                        "type": "string"
+                                    },
+                                    "phoneNumber": {
+                                        "description": "The phone number of the supplier",
+                                        "type": "string"
+                                    },
+                                    "updatedBy": {
+                                        "description": "The foreign key of the owner who updates the supplier",
+                                        "type": "integer"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "400": {
+                        "description": "Error"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/suppliers/delete/{id}/{ownerId}": {
+            "delete": {
+                "tags": [
+                    "suppliers"
+                ],
+                "summary": "Deletes an supplier",
+                "operationId": "App\\Http\\Controllers\\SuppliersController::delete",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Supplier id to delete",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    },
+                    {
+                        "name": "ownerId",
+                        "in": "path",
+                        "description": "Owner who delted the supplier",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "responses": {
+                    "400": {
+                        "description": "Supplier not deleted it's because either the deletion failed or supplier to be deleted not found"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/suppliers/restore/{id}": {
+            "get": {
+                "tags": [
+                    "suppliers"
+                ],
+                "description": "Restore the delted supplier",
+                "operationId": "App\\Http\\Controllers\\SuppliersController::restore",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Id of supplier",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "responses": {
+                    "default": {
+                        "description": "Get an supplier by id"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
         }
     },
     "components": {
